--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -17,7 +17,7 @@ body
 }
 .background
 {
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100vh;
     top: 0;
@@ -25,6 +25,7 @@ body
     right: 0;
     bottom: 0;
     z-index: -1;
+    transition: .3s all linear;
 }
 .background img
 {
@@ -45,8 +46,8 @@ body
     height: 520px;
     border-radius: .75rem;
     background-color: transparent;
-    box-shadow: -10px 10px 20px rgba(0, 0, 0, 0.8),
-                10px 10px 20px rgba(0, 0, 0, 0.8);
+    box-shadow: -5px 5px 15px  rgba(0, 0, 0, 0.8),
+                5px 5px 15px  rgba(0, 0, 0, 0.8);
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -62,11 +63,11 @@ body
     width: calc(100% - 150px);
     height: 250px;
     background-color: transparent;
-    box-shadow: -10px 10px 20px rgba(0, 0, 0, 0.8),
-                10px 10px 20px rgba(0, 0, 0, 0.8);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.8),
+                -5px 5px 10px rgba(0, 0, 0, 0.8);
     border-radius: .75rem;
     position: relative;
-    top: -60px;
+    top: -80px;
     margin: 0 auto;
 }
 .image__container img
@@ -96,11 +97,12 @@ body
     height: 5px;
     margin: 20px 10px 10px 10px;
     border-radius: 1px;
+    cursor: pointer;
 }
 .progress__bar .progress
 {
     position: relative;
-    background-color: #3D3D3D;
+    background-color: #13678A;
 }
 .info__time
 {
@@ -121,6 +123,7 @@ body
     color: #000000;
     cursor: pointer;
     margin: 0 10px 0 10px;
+    font-size: 24px;
 }
 .buttons__player i:hover
 {
